# doc-qual

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
doc_qual/: __init__.py  calibration.py  cli.py  grid.py  pdf.py  profiles.py  result.py  scorer.py  utils.py
doc_qual/features/: __init__.py  blurriness.py  brightness.py  brisque_like.py  crinkle_fold.py  edges.py  ink_bleedthrough.py  local_contrast.py  noise.py  ridges.py  shadow_gradient.py  skew.py  text_crops.py
doc_qual/profiles/: azure.json  paddleocr.json  tesseract.json  textract.json
docs/: api_reference.md  index.md
examples/: basic_usage.py
scripts/: run_50_doc_benchmark.py  run_validation.py
tests/: conftest.py  test_calibration.py  test_cli.py  test_features.py  test_features_v2.py  test_grid.py  test_pdf.py  test_positive_orientation.py  test_profiles.py  test_scorer.py  test_scorer_crop_integration.py  test_scorer_extended.py  test_text_crops.py  test_utils.py  test_validation_accuracy.py  test_validation_dataset.py  test_validation_pipeline.py  test_validation_stats.py
validation/: __init__.py  config.py  pipeline.py
validation/accuracy/: __init__.py  metrics.py
validation/dataset/: __init__.py  generator.py  manifest.py
validation/ocr/: __init__.py  base.py  mock_provider.py  registry.py  tesseract_provider.py
validation/quality/: __init__.py  indexer.py
validation/reports/: __init__.py  artifacts.py  plots.py
validation/stats/: __init__.py  hypothesis.py
